--- a/www/templates/manage_comments.html
+++ b/www/templates/manage_comments.html
@@ -1,26 +1,24 @@
 {% extends '__base__.html' %}
 
-{% block title %}用户{% endblock %}
+{% block title %}评论{% endblock %}
 
 {% block beforehead %}
 
 <script>
+
 function initVM(data) {
     $('#vm').show();
     var vm = new Vue({
         el: '#vm',
         data: {
-            users: data.users,
+            comments: data.comments,
             page: data.page
         },
         methods: {
-            delete_user: function (user) {
-                if (user.admin == true) {
-                    alert('不能删除管理员用户！')
-                    return
-                }
-                if (confirm('确认要删除用户“' + user.name + '”？删除后不可恢复！')) {
-                    postJSON('/api/users/' + user.id + '/delete', function (err, r) {
+            delete_comment: function (comment) {
+                var content = comment.content.length > 20 ? comment.content.substring(0, 20) + '...' : comment.content;
+                if (confirm('确认要删除评论“' + comment.content + '”？删除后不可恢复！')) {
+                    postJSON('/api/comments/' + comment.id + '/delete', function (err, r) {
                         if (err) {
                             return error(err);
                         }
@@ -31,8 +29,9 @@ function initVM(data) {
         }
     });
 }
+
 $(function() {
-    getJSON('/api/users', {
+    getJSON('/api/comments', {
         page: '{{ page_index }}'
     }, function (err, results) {
         if (err) {
@@ -42,6 +41,7 @@ $(function() {
         initVM(results);
     });
 });
+
 </script>
 
 {% endblock %}
@@ -51,9 +51,9 @@ $(function() {
     <div class="uk-width-1-1 uk-margin-bottom">
         <div class="uk-panel uk-panel-box">
             <ul class="uk-breadcrumb">
-                <li><a href="/manage/comments">评论</a></li>
+                <li class="uk-active"><span>评论</span></li>
                 <li><a href="/manage/blogs">日志</a></li>
-                <li class="uk-active"><span>用户</span></li>
+                <li><a href="/manage/users">用户</a></li>
             </ul>
         </div>
     </div>
@@ -65,35 +65,33 @@ $(function() {
         <span><i class="uk-icon-spinner uk-icon-medium uk-icon-spin"></i> 正在加载...</span>
     </div>
 
-    <div id="vm" class="uk-width-1-1">
+    <div id="vm" class="uk-width-1-1" style="display:none">
         <table class="uk-table uk-table-hover">
             <thead>
                 <tr>
-                    <th class="uk-width-3-10">名字</th>
-                    <th class="uk-width-4-10">电子邮件</th>
-                    <th class="uk-width-2-10">注册时间</th>
+                    <th class="uk-width-2-10">作者</th>
+                    <th class="uk-width-5-10">内容</th>
+                    <th class="uk-width-2-10">创建时间</th>
                     <th class="uk-width-1-10">操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr v-repeat="user: users" >
+                <tr v-repeat="comment: comments" >
                     <td>
-                        <span v-text="user.name"></span>
-                        <span v-if="user.admin" style="color:#d05"><i class="uk-icon-key"></i> 管理员</span>
+                        <span v-text="comment.user_name"></span>
                     </td>
                     <td>
-                        <a v-attr="href: 'mailto:'+user.email" v-text="user.email"></a>
+                        <span v-text="comment.content"></span>
                     </td>
                     <td>
-                        <span v-text="user.created_at.toDateTime()"></span>
+                        <span v-text="comment.created_at.toDateTime()"></span>
                     </td>
                     <td>
-                        <a href="#0" v-on="click: delete_user(user)"><i class="uk-icon-trash-o"></i>
+                        <a href="#0" v-on="click: delete_comment(comment)"><i class="uk-icon-trash-o"></i>
                     </td>
                 </tr>
             </tbody>
         </table>
         <div v-component="pagination" v-with="page"></div>
     </div>
-
 {% endblock %}
